--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head><title>Womi-Host</title></head>
   <body>
-    <iframe style="width: max-width; height: max-height" src="https://amazingly-set-skunk.ngrok-free.app/">
+    <iframe style="width: max; height: max" src="https://amazingly-set-skunk.ngrok-free.app/">
   </body>
 </html>
