--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Womi-Host</title></head>
+  <head>
+    <title>Womi-Host</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+    </style>
+  </head>
   <body>
-    <iframe style="width: max; height: max" src="https://amazingly-set-skunk.ngrok-free.app/">
+    <iframe src="https://amazingly-set-skunk.ngrok-free.app/">
   </body>
 </html>
