--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
   </head>
   <body>
-    <iframe src="amazingly-set-skunk.ngrok-free.app">
+    <iframe src="https://amazingly-set-skunk.ngrok-free.app/">
   </body>
 </html>
